--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@ margin-left: 28%;
 <textarea placeholder="Your message" name="body" required></textarea>
 </div>
 
-<button type="submit" href="/">Submit</button>
+<input type="submit" href="/" class="button" value="Submit"/>
 </form>
 
 
